--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
